# desktop-wallpaper-rust

./: .gitignore  Cargo.toml  README.md  build.rs  manifest.rc  resource.rc
.cargo/: config.toml
src/: main.rs  main_test.rs
tests/: main.rs
