[package]
name = "desktop-wallpaper-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/seanmonstar/reqwest
reqwest = { version = "0.11.24", features = ["json"] }
# https://github.com/serde-rs/serde
serde = { version = "1.0.197", features = ["derive"] }
# https://github.com/serde-rs/json
serde_json = "1.0.114"
# https://github.com/gentoo90/winreg-rs
winreg = "0.52.0"
# https://github.com/tokio-rs/tokio
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
# https://github.com/reujab/wallpaper.rs
wallpaper = "3.2.0"
# https://github.com/servo/rust-url
url = "2.5.0"
clap = { version = "4.5.1", features = ["derive", "cargo"] }

# https://crates.io/categories/os::windows-apis
#[target.'cfg(windows)'.dependencies]
# https://github.com/retep998/winapi-rs
#winapi = { version = "0.3.9", features = ["winuser", "winreg"] }
# https://github.com/microsoft/windows-rs
[dependencies.windows]
version = "0.54.0"
features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "System_UserProfile", "Win32_System_SystemServices", "Win32_System_Com", "Win32_System_TaskScheduler", "Win32_System_Ole", "Win32_System_Variant"]

