[package]
name = "desktop-wallpaper-rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"
#[[bin]]
#name = "desktop-wallpaper-rust"
#path = "src/main.rs"
#windows_subsystem = "windows" # 为了让程序直接运行而不打开控制台窗口

# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
[profile.release]
debug = false
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/seanmonstar/reqwest
reqwest = { version = "0.12.5", features = ["json", "__rustls"] }
# https://github.com/serde-rs/serde
serde = { version = "1.0.203", features = ["derive"] }
# https://github.com/serde-rs/json
serde_json = "1.0.120"
# https://github.com/tokio-rs/tokio
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
# https://github.com/reujab/wallpaper.rs
wallpaper = "3.2.0"
# https://github.com/servo/rust-url
url = "2.5.2"
clap = { version = "4.5.8", features = ["derive", "cargo"] }
rand = { version = "0.9.0-alpha.1", features = [] }
#select = "0.6.0"
scraper = "0.19.0"
#rustls = "0.23.4"

[target.'cfg(target_os = "windows")'.dependencies]
# https://github.com/gentoo90/winreg-rs
winreg = "0.52.0"
# https://crates.io/categories/os::windows-apis
#[target.'cfg(windows)'.dependencies]
# https://github.com/retep998/winapi-rs
#winapi = { version = "0.3.9", features = ["winuser", "winreg"] }
# https://github.com/microsoft/windows-rs
[dependencies.windows]
version = "0.58.0"
default-features = false
features = ["Data_Xml_Dom", "Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging", "System_UserProfile", "Win32_System_SystemServices", "Win32_System_Com", "Win32_System_TaskScheduler", "Win32_System_Ole", "Win32_System_Variant", "Win32_NetworkManagement", "Win32_Networking", "Win32_Networking_NetworkListManager", "Win32_Networking_WinSock", "Win32_System_SystemInformation", "Win32_NetworkManagement_WNet", "Win32_Networking_WinInet", "Win32_NetworkManagement_IpHelper", "Win32_System_EventNotificationService", "Win32_UI_Shell", "Win32_System_WinRT", "Storage", "Storage_Streams"]

[build-dependencies]
winit = "0.30.3"
embed-resource = "2.4.2"
winres = "0.1.12"
image = "0.25.1"
ico = "0.3.0"
icopng = "1.0.1"

#[package.metadata.winres]
#OriginalFilename = "desktop-wallpaper-rust.exe"
#ProductName = "Astronomy Picture of the Day"
#ProductVersion = "0.1.0"

[dev-dependencies]
tokio-test = "*"
#actix-rt = "*"